# RPM_regulation_esp32c6_TCRT500

./: CMakeLists.txt  README.md  sdkconfig.defaults
docs/: revision-proyecto.md
main/: CMakeLists.txt  Kconfig.projbuild  config.h  control.c  control.h  http_server.c  http_server.h  main.c  motor.c  motor.h  oled.c  oled.h  pid.c  pid.h  rpm.c  rpm.h  uart_cmd.c  uart_cmd.h  wifi_connect.c  wifi_connect.h
